--- a/index.html
+++ b/index.html
@@ -1583,10 +1583,10 @@
               <p><strong>Email:</strong> <span>helpdesk@uniteksolution.com</span></p>
             </div>
             <div class="social-links d-flex mt-4">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
+              <!--a href=""><i class="bi bi-twitter-x"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
               <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
+              <a href=""><i class="bi bi-linkedin"></i></a-->
             </div><div class="header-social-links"> 
   <!-- WhatsApp -->
   <a href="https://wa.me/+919867256909/?text=Hello%20Unitek%20Solutions%20Team%0A%0AI%E2%80%99m%20interested%20in%20your%20IT%20services%20and%20would%20like%20to%20know%20more%20about%20your%20offerings%20in%20hardware%2C%20AMC%2C%20networking%2C%20surveillance%2C%20or%20web%20development.%20Please%20assist%20me%20with%20the%20details.%0A%0AThank%20you%21" 
